Fixed luminosity contrast ratio issue for several contols.

--- a/src/themes/designer/styles/variables.scss
+++ b/src/themes/designer/styles/variables.scss
@@ -48,7 +48,7 @@ $tab-selected-color: #A8CF45;
 $collapse-button-color: #91D8F7;
 $color-base: #5b5f61;
 $color-danger: #e46969;
-$color-info: #91D8F7;
+$color-info: #5b5f61;
 $color-watermark: #CCC;
 $link-color: #00AFEF;
 $arrow-active-color: #F58634;
@@ -56,10 +56,10 @@ $icon-base-color: #57585a;
 
 /* Forms */
 $form-control-font-size: 0.9em;
-$form-control-border: #e6e7e8;
-$form-control-border-focused: #61b2e8;
+$form-control-border: #7f7f7fd9;
+$form-control-border-focused: #0078d4;
 $form-control-bg: #ffffff;
-$form-control-bg-readonly: #fff;
+$form-control-bg-readonly: #e6e7e8;
 $form-control-bg-disabled: #e6e7e8;
 $form-control-padding: 7px;
 $form-control-focus-color: #61b2e8;
